# nnetcpp

./: .gitignore  CMakeLists.txt  README.md  abstractmergenode.cpp  abstractmergenode.h  abstractnetworknode.cpp  abstractnetworknode.h  abstractnode.h  abstractrecurrentnetworknode.cpp  abstractrecurrentnetworknode.h  activation.h  cwrnn.cpp  cwrnn.h  dense.cpp  dense.h  gru.cpp  gru.h  lstm.cpp  lstm.h  mergeproduct.cpp  mergeproduct.h  mergesum.cpp  mergesum.h  network.cpp  network.h  networkserializer.cpp  networkserializer.h  tanh.cpp  tanh.h
tests/: CMakeLists.txt  sequencegeneration.cpp  test_gru.cpp  test_gru.h  test_merge.cpp  test_merge.h  test_perceptron.cpp  test_perceptron.h  test_recurrent.cpp  test_recurrent.h  tests.cpp  utils.h
